--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-docker>=7.0.0
-rich>=13.7.0
-click>=8.1.0
-sqlalchemy>=2.0.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-pytest>=7.4.0
+# LLM Stack Manager - Arquitectura Local Nativa
+# Dependencias simplificadas (sin Docker, sin DB)
+
+rich>=13.7.0          # CLI moderna con colores y tablas
+requests>=2.31.0      # HTTP requests para Ollama API
+pyyaml>=6.0.0         # Configuración YAML
+pytest>=7.4.0         # Testing
 pytest-asyncio>=0.21.0
